--- a/src/server/pom.xml
+++ b/src/server/pom.xml
@@ -16,7 +16,14 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
-	<dependencies>
+	
+<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -36,7 +43,9 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>8.0.27</version>
+			<version>8.0.33</version>
+			<scope>runtime</scope>
+			
 		</dependency>
 	</dependencies>
 
