--- a/src/server/src/main/resources/application.properties
+++ b/src/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://sql11.freesqldatabase.com:3306/sql11657418
-spring.datasource.username=sql11657418
-spring.datasource.password=bXYrunyIJQ
+spring.datasource.url=jdbc:mysql://localhost:3308/db
+spring.datasource.username=root
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
