--- a/src/client/package.json
+++ b/src/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "sweetalert2": "^11.9.0",
