--- a/src/client/package.json
+++ b/src/client/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.10.2",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "font-awesome": "^4.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
