--- a/src/server/Dockerfile
+++ b/src/server/Dockerfile
@@ -1,11 +1,7 @@
-FROM maven AS builder
+FROM maven:3.6.3-openjdk-17-slim AS builder
 WORKDIR /app
-COPY pom.xml .
-COPY src ./src
-RUN mvn package
+COPY . .
+RUN mvn clean package -DskipTests -q
 
-FROM openjdk:17
-WORKDIR /app
-COPY --from=builder /app/target/server-0.0.1-SNAPSHOT.jar server.jar
-EXPOSE 8080
-CMD ["java", "-jar", "server.jar"]
+CMD mvn spring-boot:run
+
