--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,27 +13,45 @@ services:
       - "3308:3306"
     volumes:
       - ./db:/var/lib/mysql
+    # healthcheck:
+    #   test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p root"]
+    #   interval: 5s
+    #   retries: 3
 
-  # server: 
-  #   build:
-  #     dockerfile: Dockerfile
-  #     context: ./src/server
-  #   ports:
-  #     - "8080:8080"
-  #   volumes:
-  #     - ./src/server:/app
-  #   depends_on:
-  #     - db
+#   server: 
+#     build:
+#       dockerfile: Dockerfile
+#       context: ./src/server
+#     ports:
+#       - "8080:8080"
+#     environment:
+#       - SPRING_DATASOURCE_URL=jdbc:mysql://db:3308/db
+#       - SPRING_DATASOURCE_USERNAME=root
+#       - SPRING_DATASOURCE_PASSWORD=root
+#       - SPRING_DATASOURCE_DRIVER-CLASS-NAME=com.mysql.cj.jdbc.Driver
+#       - SPRING_JPA_HIBERNATE_DDL-AUTO=update
+#     volumes:
+#       - ./src/server:/app
+#     networks:
+#       - mynet
+#     depends_on:
+#       db:
+#         condition: service_healthy
 
-  # client:
-  #   build:
-  #     dockerfile: Dockerfile
-  #     context: ./src/client
-  #   ports:
-  #     - "3000:3000"
-  #   volumes:
-  #     - /app/node_modules
-  #     - ./src/client:/app
-  #   depends_on:
-  #     - server
-  #     - db
+#   client:
+#     build:
+#       dockerfile: Dockerfile
+#       context: ./src/client
+#     ports:
+#       - "3000:3000"
+#     volumes:
+#       - /app/node_modules
+#       - ./src/client:/app
+#     networks:
+#       - mynet
+#     depends_on:
+#       - server
+
+# networks:
+#   mynet:
+#     driver: bridge
