--- a/src/client/package.json
+++ b/src/client/package.json
@@ -13,12 +13,14 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "stompjs": "^2.3.3",
     "styled-components": "^6.1.0",
     "sweetalert2": "^11.9.0",
     "web-vitals": "^2.1.4"
