--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ src/client/node_modules
 src/server/node_modules
 .vscode
 db
+.scannerwork
+sonarqube/extensions
+sonarqube/data
+sonarqube/logstest.jsx
 
-test.jsx
 test2.jsx
+test.jsx
