--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,46 +39,58 @@ services:
   #     db:
   #       condition: service_healthy
 
-  # client:
-  #   build:
-  #     dockerfile: Dockerfile
-  #     context: ./src/client
-  #   ports:
-  #     - "3000:3000"
-  #   volumes:
-  #     - /app/node_modules
-  #     - ./src/client:/app
-  #   networks:
-  #     - mynet
-  #   depends_on:
-  #     - server
+#   client:
+#     build:
+#       dockerfile: Dockerfile
+#       context: ./src/client
+#     ports:
+#       - "3000:3000"
+#     volumes:
+#       - /app/node_modules
+#       - ./src/client:/app
+#     networks:
+#       - mynet
+#     depends_on:
+#       - server
 
-  # db_sonar:
-  #   image: postgres:latest
-  #   environment:
-  #     - POSTGRES_USER=sonar
-  #     - POSTGRES_PASSWORD=sonar
-  #     - POSTGRES_DB=sonar
-  #   networks:
-  #     - mynet
-  #   depends_on:
-  #     - client
-  
-  # sonarqube:
-  #   image: sonarqube:latest
-  #   ports:
-  #     - "9000:9000"
-  #     - "9092:9092" 
-  #   environment:
-  #     - SONARQUBE_JDBC_URL=jdbc:postgresql://db:5432/sonar
-  #     - SONARQUBE_JDBC_USERNAME=sonar
-  #     - SONARQUBE_JDBC_PASSWORD=sonar
-  #     - SONARQUBE_WEB_LOGIN=root    
-  #     - SONARQUBE_WEB_PASSWORD=root 
-  #   networks:
-  #     - mynet
-  #   depends_on:
-  #     - db_sonar
+#   sonarqube:
+#       image: sonarqube:latest
+#       hostname: sonarqube
+#       container_name: sonarqube
+#       depends_on:
+#         - db
+#       environment:
+#         SONAR_JDBC_URL: jdbc:postgresql://postgresql:5432/sonar
+#         SONAR_JDBC_USERNAME: sonar
+#         SONAR_JDBC_PASSWORD: sonar
+#       networks:
+#         - mynet
+#       volumes:
+#         - sonarqube_data:/opt/sonarqube/data
+#         - sonarqube_extensions:/opt/sonarqube/extensions
+#         - sonarqube_logs:/opt/sonarqube/logs
+#       ports:
+#         - "9000:9000"
+#   postgresql:
+#     image: postgres:latest
+#     hostname: postgresql
+#     container_name: postgresql
+#     environment:
+#       POSTGRES_USER: sonar
+#       POSTGRES_PASSWORD: sonar
+#       POSTGRES_DB: sonar
+#     networks:
+#         - mynet
+#     volumes:
+#       - postgresql:/var/lib/postgresql
+#       - postgresql_data:/var/lib/postgresql/data
+
+# volumes:
+#   sonarqube_data:
+#   sonarqube_extensions:
+#   sonarqube_logs:
+#   postgresql:
+#   postgresql_data:
 
 networks:
   mynet:
