--- a/src/client/package.json
+++ b/src/client/package.json
@@ -20,6 +20,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "sonarqube-scanner": "^3.2.0",
     "stompjs": "^2.3.3",
     "styled-components": "^6.1.0",
     "sweetalert2": "^11.9.0",
