--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,44 +53,44 @@ services:
 #     depends_on:
 #       - server
 
-  sonarqube:
-      image: sonarqube:latest
-      hostname: sonarqube
-      container_name: sonarqube
-      depends_on:
-        - db
-      environment:
-        SONAR_JDBC_URL: jdbc:postgresql://postgresql:5432/sonar
-        SONAR_JDBC_USERNAME: sonar
-        SONAR_JDBC_PASSWORD: sonar
-      networks:
-        - mynet
-      volumes:
-        - sonarqube_data:/opt/sonarqube/data
-        - sonarqube_extensions:/opt/sonarqube/extensions
-        - sonarqube_logs:/opt/sonarqube/logs
-      ports:
-        - "9000:9000"
-  postgresql:
-    image: postgres:latest
-    hostname: postgresql
-    container_name: postgresql
-    environment:
-      POSTGRES_USER: sonar
-      POSTGRES_PASSWORD: sonar
-      POSTGRES_DB: sonar
-    networks:
-        - mynet
-    volumes:
-      - postgresql:/var/lib/postgresql
-      - postgresql_data:/var/lib/postgresql/data
+#   sonarqube:
+#       image: sonarqube:latest
+#       hostname: sonarqube
+#       container_name: sonarqube
+#       depends_on:
+#         - db
+#       environment:
+#         SONAR_JDBC_URL: jdbc:postgresql://postgresql:5432/sonar
+#         SONAR_JDBC_USERNAME: sonar
+#         SONAR_JDBC_PASSWORD: sonar
+#       networks:
+#         - mynet
+#       volumes:
+#         - sonarqube_data:/opt/sonarqube/data
+#         - sonarqube_extensions:/opt/sonarqube/extensions
+#         - sonarqube_logs:/opt/sonarqube/logs
+#       ports:
+#         - "9000:9000"
+#   postgresql:
+#     image: postgres:latest
+#     hostname: postgresql
+#     container_name: postgresql
+#     environment:
+#       POSTGRES_USER: sonar
+#       POSTGRES_PASSWORD: sonar
+#       POSTGRES_DB: sonar
+#     networks:
+#         - mynet
+#     volumes:
+#       - postgresql:/var/lib/postgresql
+#       - postgresql_data:/var/lib/postgresql/data
 
-volumes:
-  sonarqube_data:
-  sonarqube_extensions:
-  sonarqube_logs:
-  postgresql:
-  postgresql_data:
+# volumes:
+#   sonarqube_data:
+#   sonarqube_extensions:
+#   sonarqube_logs:
+#   postgresql:
+#   postgresql_data:
 
 networks:
   mynet:
