--- a/src/client/package.json
+++ b/src/client/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "sonarqube-scanner": "^3.2.0",
